--- a/THANKS
+++ b/THANKS
@@ -31,6 +31,7 @@ support in Gnuastro. The list is ordered alphabetically.
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Richard Stallman                     rms@gnu.org
     Ole Streicher                        olebole@debian.org
+    Ignacio Trujillo                     trujillo@iac.es
     David Valls-Gabaud                   david.valls-gabaud@obspm.fr
     Christopher Willmer                  cnaw@as.arizona.edu
 
