--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   Arithmetic: now has a new `--globalhdu' (`-g') option which can be used
   once for all the input images.
 
+  MakeProfiles: the new `--kernel' option can make a kernel image without
+  the need to define a catalog. With this option, a catalog (or
+  accompanying background image) must not be given.
+
 ** Removed features
 
 ** Changed features
@@ -35,10 +39,6 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   multiple times and the order of its calling will be used for the column
   containing the center in the respective dimension (in FITS format).
 
-  MakeProfiles: The new `--kernel' option can make a kernel image without
-  the need to define a catalog. With this option, a catalog (or
-  accompanying background image) must not be given.
-
   `gal_fits_img_info' now also returns the name and units of the dataset
   (if they aren't NULL). So it takes two extra arguments.
 
@@ -54,6 +54,12 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   by the units of the WCS.
 
 ** Bug fixes
+
+  MakeProfiles long options on 32bit big endian systems (bug #51341).
+
+
+
+
 
 * Noteworthy changes in release 0.3 (library 1.0.0) (2017-06-01) [stable]
 
