--- a/THANKS
+++ b/THANKS
@@ -18,6 +18,7 @@ support in Gnuastro. The list is ordered alphabetically.
     Karl Berry                           karl@gnu.org
     Roland Bacon                         roland.bacon@univ-lyon1.fr
     Nicolas Bouché                       nicolas.bouche@irap.omp.eu
+    Adrian Bunk                          bunk@debian.org
     Rosa Calvi                           rcalvi@iac.es
     Antonio Diaz Diaz                    antonio@gnu.org
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
